deploy/buildversionsapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buildversionsapi
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "buildversionsapi.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: buildversionsapi
            port:
              number: 80
  - host: "buildversionsapi.jansson.today"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: buildversionsapi
            port:
              number: 80
